fix(theme): fixed an issue with aetheryte names sometimes not showing up properly

--- a/apps/client/src/app/modules/settings/settings-popup/settings-popup.component.less
+++ b/apps/client/src/app/modules/settings/settings-popup/settings-popup.component.less
@@ -1,3 +1,11 @@
+
+:host ::ng-deep{
+  .ant-tabs-content {
+    overflow: auto;
+    max-height: 84vh;
+  }  
+}
+
 .tabset {
   height: 100%;
 }
